# Tradebot

./: README.md
Trade-Bot/: alternative_data.py  binance_data.py  config.py  main.py  news_sentiment.py  pyproject.toml  signals.db
Trade-Bot/attached_assets/: Pasted-Yahoo-Finance-data-for-XAU-USD-1h-home-runner-workspace-alternative-data-py-101-FutureWarning--1751315948637_1751315948637.txt
