[project]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "ccxt>=4.4.91",
    "numpy>=2.3.1",
    "pandas>=2.3.0",
    "requests>=2.32.4",
    "schedule>=1.2.2",
    "sqlalchemy>=2.0.41",
    "ta>=0.11.0",
    "textblob>=0.19.0",
    "yfinance>=0.2.63",
]
